--- a/index.html
+++ b/index.html
@@ -14,5 +14,29 @@
         <li>három</li>
         <li>négy</li>
     </ul>
+
+    <div class="keret">
+        <form action="index.html">
+            <h1>Feliratkozás</h1>
+            <div>
+                <label for="Name">Név</label>
+                <input type="text" name="nev" id="nev">
+            </div>
+           
+            <div>
+                <label for="mail">E-mail:</label>
+                <input type="email" name="mail" id="mail">
+            </div>
+            <div>
+                <p>Feliratkozol:</p>
+                <input type="radio" name="igen" id="igen">
+                <label for="igen">Igen</label>
+            </div>
+            <div>
+                <input type="radio" name="nem" id="nem">
+                <label for="nem">Nem</label>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
